refacto train functions

--- a/datasets/loan/compare.ipynb
+++ b/datasets/loan/compare.ipynb
@@ -224,6 +224,26 @@
     "        self.lo = self.lo.round(*args)\n",
     "        return self\n",
     "\n",
+    "class BoundNetLoss():\n",
+    "    def __init__(self, hi, nn, lo):\n",
+    "        self.hi_loss_fn = hi\n",
+    "        self.nn_loss_fn = nn\n",
+    "        self.lo_loss_fn = lo\n",
+    "\n",
+    "    def __call__(self, pred, true):\n",
+    "        self.nn_loss = self.nn_loss_fn(pred.nn, true)\n",
+    "\n",
+    "        target = pred.nn.detach()\n",
+    "        self.hi_loss = self.hi_loss_fn(pred.hi, target)\n",
+    "        self.lo_loss = self.lo_loss_fn(pred.lo, target)\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def backward(self):\n",
+    "        self.nn_loss.backward()\n",
+    "        self.hi_loss.backward()\n",
+    "        self.lo_loss.backward()\n",
+    "\n",
     "class BoundNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -333,10 +353,10 @@
     "\n",
     "print(df_y.iloc[itrue+ifalse].value_counts())\n",
     "\n",
-    "x_train=torch.Tensor(df_x.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
-    "y_train=torch.Tensor(df_y.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
+    "x_data=torch.Tensor(df_x.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
+    "y_data=torch.Tensor(df_y.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
     "\n",
-    "print(x_train.shape, y_train.shape)"
+    "print(x_data.shape, y_data.shape)"
    ]
   },
   {
@@ -352,65 +372,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_boundnet(x, y, max_epoch=5000, learning_rate=1e-2):\n",
-    "    boundnet = BoundNet()\n",
-    "\n",
-    "    # A loss function for each nn\n",
-    "    loss_hi_nn = AsymBCELoss(100)\n",
-    "    loss_lo_nn = AsymBCELoss(.001)\n",
-    "    loss_nn_tr = nn.BCELoss()\n",
-    "\n",
-    "    # One optimizer for all parameters\n",
-    "    optimizer = Adam(boundnet.parameters(), lr=learning_rate)\n",
-    "\n",
+    "def train_model(x, y, model, loss_fn, optimizer, max_epoch):\n",
     "    for _ in range(max_epoch):\n",
-    "        boundnet.train()\n",
-    "        y_pred = boundnet(x)\n",
+    "        model.train()\n",
+    "        y_pred = model(x)\n",
     "        \n",
     "        # loss with true y values\n",
-    "        loss_nn = loss_nn_tr(y_pred.nn, y)\n",
+    "        loss = loss_fn(y_pred, y)\n",
     "\n",
-    "        # losses with y values of the trained nn\n",
-    "        y_target = y_pred.nn.detach()\n",
-    "        loss_hi = loss_hi_nn(y_pred.hi, y_target)\n",
-    "        loss_lo = loss_lo_nn(y_pred.lo, y_target)\n",
-    "\n",
-    "        boundnet.zero_grad()\n",
-    "        loss_nn.backward()\n",
-    "        loss_hi.backward()\n",
-    "        loss_lo.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "    return boundnet, y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_simplenet(x, y, max_epoch=5000, learning_rate=1e-2):\n",
-    "    simplenet = SimpleNet()\n",
-    "\n",
-    "    # A loss function for each nn\n",
-    "    loss_net = nn.BCELoss()\n",
-    "\n",
-    "    # One optimizer for all parameters\n",
-    "    optimizer = Adam(simplenet.parameters(), lr=learning_rate)\n",
-    "\n",
-    "    for _ in range(max_epoch):\n",
-    "        simplenet.train()\n",
-    "        y_pred = simplenet(x)\n",
-    "        \n",
-    "        # loss in comparison with true y values\n",
-    "        loss = loss_net(y_pred, y)\n",
-    "\n",
-    "        simplenet.zero_grad()\n",
+    "        model.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    \n",
-    "    return simplenet, y_pred"
+    "\n",
+    "    return model, y_pred\n",
+    "\n",
+    "def train_boundnet(x, y, max_epoch=5000, learning_rate=1e-2):\n",
+    "    model = BoundNet()\n",
+    "    loss_fn = BoundNetLoss(AsymBCELoss(100), nn.BCELoss(), AsymBCELoss(.001))\n",
+    "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "    return train_model(x, y, model, loss_fn, optimizer, max_epoch=max_epoch)\n",
+    "\n",
+    "def train_simplenet(x, y, max_epoch=5000, learning_rate=1e-2):\n",
+    "    model = SimpleNet()\n",
+    "    loss_fn = nn.BCELoss()\n",
+    "    optimizer = Adam(model.parameters(), lr=learning_rate)\n",
+    "\n",
+    "    return train_model(x, y, model, loss_fn, optimizer, max_epoch=max_epoch)"
    ]
   },
   {
@@ -422,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -484,52 +472,52 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.789    |    SimpleNet      0.722    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
-      "\t              High           0.500    |    Low            0.766    ||    High           0.850    |    Low            0.668\n",
-      "\tCoverage      High           0.368    |    Low            0.444    ||    High           0.739    |    Low            0.012\n",
+      "\tF1 score      BoundNet       0.667    |    SimpleNet      0.703    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.483    |    Low            0.679    ||    High           0.804    |    Low            0.665\n",
+      "\tCoverage      High           0.368    |    Low            0.000    ||    High           0.673    |    Low            0.000\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.769    |    SimpleNet      0.718    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.690    |    Low            0.679    ||    High           0.755    |    Low            0.665\n",
-      "\tCoverage      High           0.526    |    Low            0.000    ||    High           0.606    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.649    |    SimpleNet      0.529    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.516    |    Low            0.679    ||    High           0.904    |    Low            0.665\n",
+      "\tCoverage      High           0.421    |    Low            0.000    ||    High           0.824    |    Low            0.000\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.541    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
-      "\t              High           0.571    |    Low            0.679    ||    High           0.854    |    Low            0.665\n",
-      "\tCoverage      High           0.421    |    Low            0.000    ||    High           0.745    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.732    |    SimpleNet      0.718    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
+      "\t              High           0.516    |    Low            0.667    ||    High           0.759    |    Low            0.665\n",
+      "\tCoverage      High           0.421    |    Low            0.056    ||    High           0.612    |    Low            0.000\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.629    |    SimpleNet      0.588    ||    BoundNet       0.975    |    SimpleNet      0.975\n",
-      "\t              High           0.483    |    Low            0.679    ||    High           0.900    |    Low            0.665\n",
-      "\tCoverage      High           0.368    |    Low            0.000    ||    High           0.818    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.800    |    SimpleNet      0.750    ||    BoundNet       0.975    |    SimpleNet      0.976\n",
+      "\t              High           0.581    |    Low            0.679    ||    High           0.769    |    Low            0.665\n",
+      "\tCoverage      High           0.474    |    Low            0.000    ||    High           0.624    |    Low            0.000\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.615    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.706    |    Low            0.692    ||    High           0.904    |    Low            0.668\n",
-      "\tCoverage      High           0.667    |    Low            0.158    ||    High           0.825    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.595    |    SimpleNet      0.564    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.533    |    Low            0.655    ||    High           0.810    |    Low            0.668\n",
+      "\tCoverage      High           0.444    |    Low            0.000    ||    High           0.681    |    Low            0.000\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.683    |    SimpleNet      0.611    ||    BoundNet       0.973    |    SimpleNet      0.973\n",
-      "\t              High           0.563    |    Low            0.655    ||    High           0.733    |    Low            0.668\n",
-      "\tCoverage      High           0.500    |    Low            0.000    ||    High           0.578    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.727    |    SimpleNet      0.744    ||    BoundNet       0.978    |    SimpleNet      0.978\n",
+      "\t              High           0.621    |    Low            0.655    ||    High           0.839    |    Low            0.668\n",
+      "\tCoverage      High           0.500    |    Low            0.000    ||    High           0.723    |    Low            0.000\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.732    |    SimpleNet      0.732    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
-      "\t              High           0.581    |    Low            0.655    ||    High           0.793    |    Low            0.668\n",
-      "\tCoverage      High           0.500    |    Low            0.000    ||    High           0.657    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.789    |    SimpleNet      0.737    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.645    |    Low            0.655    ||    High           0.843    |    Low            0.668\n",
+      "\tCoverage      High           0.556    |    Low            0.000    ||    High           0.729    |    Low            0.000\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.727    |    SimpleNet      0.682    ||    BoundNet       0.976    |    SimpleNet      0.976\n",
-      "\t              High           0.649    |    Low            0.667    ||    High           0.806    |    Low            0.668\n",
-      "\tCoverage      High           0.667    |    Low            0.158    ||    High           0.675    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.667    |    SimpleNet      0.649    ||    BoundNet       0.975    |    SimpleNet      0.976\n",
+      "\t              High           0.533    |    Low            0.655    ||    High           0.839    |    Low            0.668\n",
+      "\tCoverage      High           0.444    |    Low            0.000    ||    High           0.723    |    Low            0.000\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.762    |    SimpleNet      0.703    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.684    |    Low            0.667    ||    High           0.863    |    Low            0.667\n",
-      "\tCoverage      High           0.722    |    Low            0.000    ||    High           0.759    |    Low            0.000\n",
+      "\tF1 score      BoundNet       0.683    |    SimpleNet      0.611    ||    BoundNet       0.975    |    SimpleNet      0.976\n",
+      "\t              High           0.444    |    Low            0.667    ||    High           0.823    |    Low            0.668\n",
+      "\tCoverage      High           0.333    |    Low            0.000    ||    High           0.699    |    Low            0.006\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.714    |    SimpleNet      0.514    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
-      "\t              High           0.600    |    Low            0.706    ||    High           0.806    |    Low            0.667\n",
-      "\tCoverage      High           0.500    |    Low            0.167    ||    High           0.675    |    Low            0.000\n"
+      "\tF1 score      BoundNet       0.600    |    SimpleNet      0.615    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
+      "\t              High           0.500    |    Low            0.667    ||    High           0.855    |    Low            0.667\n",
+      "\tCoverage      High           0.389    |    Low            0.000    ||    High           0.747    |    Low            0.000\n"
      ]
     }
    ],
    "source": [
-    "skf = model_selection.StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
-    "bnet_split_res = cross_valid(x_train, y_train, train_boundnet, skf)\n",
-    "snet_split_res = cross_valid(x_train, y_train, train_simplenet, skf)\n",
+    "skf = model_selection.StratifiedKFold(n_splits=10, shuffle=True, random_state=104)\n",
+    "bnet_split_res = cross_valid(x_data, y_data, train_boundnet, skf)\n",
+    "snet_split_res = cross_valid(x_data, y_data, train_simplenet, skf)\n",
     "\n",
     "for i, ((bt, tt, bv, tv), (st, _, sv, _)) in enumerate(zip(bnet_split_res, snet_split_res)):\n",
     "    prompts = []\n",
