moved code + better data processing

--- a/approx_nn/compare.ipynb
+++ b/approx_nn/compare.ipynb
@@ -30,8 +30,10 @@
     "from torch.optim import Adam\n",
     "\n",
     "filepath = os.path.abspath('')\n",
-    "sys.path.append(os.path.join(filepath, \"..\", \"..\", \"compiling_nn\"))\n",
+    "sys.path.append(os.path.join(filepath, \"..\", \"compiling_nn\"))\n",
+    "sys.path.append(os.path.join(filepath, \"..\", \"datasets\", \"loan\"))\n",
     "from build_odd import compile_nn\n",
+    "from loan import get_loan_dataset\n",
     "\n",
     "pd.options.mode.copy_on_write = True"
    ]
@@ -298,58 +300,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data processing"
+    "## Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([368, 25])\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"loan_data_set.csv\", sep=\",\")\n",
-    "df = df.drop(columns=[\"Loan_ID\"])\n",
-    "\n",
-    "# Remove above 98.5th percentile for 'ApplicantIncome' and 'CoapplicantIncome'\n",
-    "df_rank = df[[\"ApplicantIncome\", \"CoapplicantIncome\"]]\n",
-    "df_rank[\"rankA\"] = df_rank[[\"ApplicantIncome\"]].rank(pct=True)\n",
-    "df_rank[\"rankCo\"] = df_rank[\"CoapplicantIncome\"].rank(pct=True)\n",
-    "\n",
-    "df = df.loc[(df_rank[\"rankA\"]<=0.985) & (df_rank[\"rankCo\"]<=0.985)]\n",
-    "df.index = range(len(df))\n",
-    "\n",
-    "# Transform using hot encoding\n",
-    "df_y = pd.get_dummies(df[[\"Loan_Status\"]], drop_first=True)\n",
-    "df_x = df.drop(columns=[\"Loan_Status\"])\n",
-    "\n",
-    "nunique = df_x.nunique(axis=0)\n",
-    "df_x_mean = df_x.mean(axis=0, numeric_only=True)\n",
-    "\n",
-    "for col, n in nunique.items():\n",
-    "    if n > 4:\n",
-    "        df_x[col] = df_x[col].apply(lambda x : min(4, x//(.5*df_x_mean[col])))\n",
-    "\n",
-    "df_x = pd.get_dummies(df_x, columns=df_x.columns, drop_first=True)\n",
-    "\n",
-    "# Balance dataset\n",
-    "itrue = df_y.index[df_y[\"Loan_Status_Y\"]==1].tolist()\n",
-    "ifalse = df_y.index[df_y[\"Loan_Status_Y\"]==0].tolist()\n",
-    "\n",
-    "swap = len(itrue) > len(ifalse)\n",
-    "if swap:\n",
-    "    itrue,ifalse=ifalse,itrue\n",
-    "\n",
-    "ifalse = random.choices(ifalse, k=len(itrue))\n",
-    "\n",
-    "if swap:\n",
-    "    itrue,ifalse=ifalse,itrue\n",
-    "\n",
-    "# print(df_y.iloc[itrue+ifalse].value_counts())\n",
-    "\n",
-    "x_data=torch.Tensor(df_x.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
-    "y_data=torch.Tensor(df_y.iloc[itrue+ifalse].to_numpy(dtype=int))\n",
-    "\n",
-    "# print(x_data.shape, y_data.shape)"
+    "np_x, np_y = get_loan_dataset(balancing=True, discretizing=True, hot_encoding=True, rmv_pct=0.985)\n",
+    "x_data, y_data = torch.Tensor(np_x), torch.Tensor(np_y)\n",
+    "print(x_data.size())"
    ]
   },
   {
@@ -361,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,55 +435,55 @@
      "output_type": "stream",
      "text": [
       "Fold   1 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.810    |    SimpleNet      0.789    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.778    |    Low            0.723    ||    High           0.929    |    Low            0.946\n",
-      "\tCoverage      High           0.737    |    Low            0.895    ||    High           0.867    |    Low            1.000\n",
-      "\t              High           0.833    |    Low            0.389    ||    High           1.000    |    Low            0.886\n",
+      "\tF1 score      BoundNet       0.769    |    SimpleNet      0.667    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.606    |    Low            0.783    ||    High           0.922    |    Low            0.946\n",
+      "\tCoverage      High           0.526    |    Low            0.947    ||    High           0.855    |    Low            1.000\n",
+      "\t              High           0.778    |    Low            0.500    ||    High           1.000    |    Low            0.886\n",
       "Fold   2 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.737    |    SimpleNet      0.743    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.600    |    Low            0.698    ||    High           0.939    |    Low            0.889\n",
-      "\tCoverage      High           0.474    |    Low            0.789    ||    High           0.885    |    Low            1.000\n",
-      "\t              High           0.889    |    Low            0.500    ||    High           1.000    |    Low            0.753\n",
+      "\tF1 score      BoundNet       0.556    |    SimpleNet      0.667    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
+      "\t              High           0.452    |    Low            0.632    ||    High           0.946    |    Low            0.968\n",
+      "\tCoverage      High           0.368    |    Low            0.632    ||    High           0.897    |    Low            1.000\n",
+      "\t              High           0.722    |    Low            0.611    ||    High           1.000    |    Low            0.934\n",
       "Fold   3 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.718    |    SimpleNet      0.684    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.703    |    Low            0.683    ||    High           0.935    |    Low            0.932\n",
-      "\tCoverage      High           0.684    |    Low            0.737    ||    High           0.879    |    Low            1.000\n",
-      "\t              High           0.722    |    Low            0.556    ||    High           1.000    |    Low            0.855\n",
+      "\tF1 score      BoundNet       0.700    |    SimpleNet      0.732    ||    BoundNet       0.988    |    SimpleNet      0.988\n",
+      "\t              High           0.632    |    Low            0.766    ||    High           0.918    |    Low            0.935\n",
+      "\tCoverage      High           0.632    |    Low            0.947    ||    High           0.848    |    Low            1.000\n",
+      "\t              High           0.611    |    Low            0.444    ||    High           1.000    |    Low            0.861\n",
       "Fold   4 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.703    |    SimpleNet      0.615    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.516    |    Low            0.718    ||    High           0.878    |    Low            0.914\n",
-      "\tCoverage      High           0.421    |    Low            0.737    ||    High           0.782    |    Low            1.000\n",
-      "\t              High           0.778    |    Low            0.667    ||    High           1.000    |    Low            0.813\n",
+      "\tF1 score      BoundNet       0.529    |    SimpleNet      0.588    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.400    |    Low            0.647    ||    High           0.881    |    Low            0.938\n",
+      "\tCoverage      High           0.316    |    Low            0.579    ||    High           0.788    |    Low            1.000\n",
+      "\t              High           0.722    |    Low            0.778    ||    High           1.000    |    Low            0.867\n",
       "Fold   5 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.629    |    SimpleNet      0.632    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.296    |    Low            0.732    ||    High           0.863    |    Low            0.910\n",
-      "\tCoverage      High           0.222    |    Low            0.833    ||    High           0.759    |    Low            1.000\n",
-      "\t              High           0.737    |    Low            0.579    ||    High           1.000    |    Low            0.800\n",
+      "\tF1 score      BoundNet       0.789    |    SimpleNet      0.711    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.727    |    Low            0.821    ||    High           0.911    |    Low            0.951\n",
+      "\tCoverage      High           0.667    |    Low            0.889    ||    High           0.837    |    Low            1.000\n",
+      "\t              High           0.842    |    Low            0.737    ||    High           1.000    |    Low            0.897\n",
       "Fold   6 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.595    |    SimpleNet      0.571    ||    BoundNet       0.988    |    SimpleNet      0.988\n",
-      "\t              High           0.483    |    Low            0.667    ||    High           0.742    |    Low            0.853\n",
-      "\tCoverage      High           0.389    |    Low            0.778    ||    High           0.590    |    Low            1.000\n",
-      "\t              High           0.789    |    Low            0.474    ||    High           1.000    |    Low            0.655\n",
+      "\tF1 score      BoundNet       0.632    |    SimpleNet      0.649    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.629    |    Low            0.636    ||    High           0.915    |    Low            0.954\n",
+      "\tCoverage      High           0.611    |    Low            0.778    ||    High           0.843    |    Low            1.000\n",
+      "\t              High           0.684    |    Low            0.368    ||    High           1.000    |    Low            0.903\n",
       "Fold   7 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.750    |    SimpleNet      0.778    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.686    |    Low            0.723    ||    High           0.893    |    Low            0.902\n",
-      "\tCoverage      High           0.667    |    Low            0.944    ||    High           0.807    |    Low            1.000\n",
-      "\t              High           0.737    |    Low            0.368    ||    High           1.000    |    Low            0.782\n",
+      "\tF1 score      BoundNet       0.842    |    SimpleNet      0.811    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.743    |    Low            0.762    ||    High           0.904    |    Low            0.933\n",
+      "\tCoverage      High           0.722    |    Low            0.889    ||    High           0.825    |    Low            1.000\n",
+      "\t              High           0.789    |    Low            0.579    ||    High           1.000    |    Low            0.855\n",
       "Fold   8 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.788    |    SimpleNet      0.789    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.593    |    Low            0.769    ||    High           0.851    |    Low            0.922\n",
-      "\tCoverage      High           0.444    |    Low            0.833    ||    High           0.741    |    Low            1.000\n",
-      "\t              High           0.947    |    Low            0.684    ||    High           1.000    |    Low            0.830\n",
+      "\tF1 score      BoundNet       0.563    |    SimpleNet      0.706    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.462    |    Low            0.579    ||    High           0.875    |    Low            0.951\n",
+      "\tCoverage      High           0.333    |    Low            0.611    ||    High           0.777    |    Low            1.000\n",
+      "\t              High           0.895    |    Low            0.526    ||    High           1.000    |    Low            0.897\n",
       "Fold   9 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.824    |    SimpleNet      0.769    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
-      "\t              High           0.643    |    Low            0.773    ||    High           0.851    |    Low            0.910\n",
-      "\tCoverage      High           0.500    |    Low            0.944    ||    High           0.741    |    Low            1.000\n",
-      "\t              High           0.944    |    Low            0.500    ||    High           1.000    |    Low            0.801\n",
+      "\tF1 score      BoundNet       0.706    |    SimpleNet      0.743    ||    BoundNet       0.979    |    SimpleNet      0.979\n",
+      "\t              High           0.571    |    Low            0.762    ||    High           0.882    |    Low            0.938\n",
+      "\tCoverage      High           0.444    |    Low            0.889    ||    High           0.789    |    Low            1.000\n",
+      "\t              High           0.889    |    Low            0.556    ||    High           1.000    |    Low            0.867\n",
       "Fold  10 :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.611    |    SimpleNet      0.649    ||    BoundNet       0.985    |    SimpleNet      0.985\n",
-      "\t              High           0.533    |    Low            0.619    ||    High           0.922    |    Low            0.927\n",
-      "\tCoverage      High           0.444    |    Low            0.722    ||    High           0.855    |    Low            1.000\n",
-      "\t              High           0.778    |    Low            0.389    ||    High           1.000    |    Low            0.843\n"
+      "\tF1 score      BoundNet       0.718    |    SimpleNet      0.757    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.788    |    Low            0.683    ||    High           0.915    |    Low            0.957\n",
+      "\tCoverage      High           0.722    |    Low            0.778    ||    High           0.843    |    Low            1.000\n",
+      "\t              High           0.889    |    Low            0.500    ||    High           1.000    |    Low            0.910\n"
      ]
     }
    ],
@@ -561,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -569,10 +539,10 @@
      "output_type": "stream",
      "text": [
       "Average  :                                  Valid                          ||                          Train                      \n",
-      "\tF1 score      BoundNet       0.716    |    SimpleNet      0.702    ||    BoundNet       0.984    |    SimpleNet      0.984\n",
-      "\t              High           0.583    |    Low            0.710    ||    High           0.880    |    Low            0.911\n",
-      "\tCoverage      High           0.498    |    Low            0.821    ||    High           0.791    |    Low            1.000\n",
-      "\t              High           0.815    |    Low            0.511    ||    High           1.000    |    Low            0.802\n"
+      "\tF1 score      BoundNet       0.680    |    SimpleNet      0.703    ||    BoundNet       0.982    |    SimpleNet      0.982\n",
+      "\t              High           0.601    |    Low            0.707    ||    High           0.907    |    Low            0.947\n",
+      "\tCoverage      High           0.534    |    Low            0.794    ||    High           0.830    |    Low            1.000\n",
+      "\t              High           0.782    |    Low            0.560    ||    High           1.000    |    Low            0.888\n"
      ]
     }
    ],
